# Open-MCP-Manager

./: .env  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  clippy_report.txt  database.sql  input.css  next.config.ts  package-lock.json  package.json  registry.json  tailwind.config.js
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
.orchids/: orchids.json
icons/: icon.icns
public/: style.css  tailwind.css
scripts/: check-dx.js  sync-version.js
src/: app.rs  db.rs  lib.rs  main.rs  models.rs  process.rs  state.rs
src/app/: actions.ts  layout.tsx  page.tsx
src/app/api/mcp/message/: route.ts
src/app/api/mcp/sse/: route.ts
src/components/: ConfigViewer.tsx  Container.tsx  Explorer.tsx  Navbar.tsx  ServerCard.tsx  ServerForm.tsx  config_viewer.rs  explorer.rs  mod.rs  navbar.rs  research.rs  server_card.rs  server_console.rs  server_list.rs  settings.rs  sidebar.rs  theme_toggle.rs  three_preview.rs  toast.rs
src/lib/: mcp-router.ts  mcp-transports.ts  types.ts
tests/: integration_tests.rs
