[package]
name = "open-mcp-manager"
version = "0.9.1"
edition = "2021"
authors = ["Millsy.dev"]
description = "A unified desktop manager for Model Context Protocol servers"
license = "MIT"
repository = "https://github.com/millsydotdev/Open-MCP-Manager"
homepage = "https://github.com/millsydotdev/Open-MCP-Manager"
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "desktop", "dioxus"]
categories = ["development-tools", "gui"]

[dependencies]
# Dioxus 0.7 - The core UI framework
dioxus = { version = "0.7", features = ["desktop", "router"] }
dioxus-logger = "0.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Data & Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# System Interaction
dirs = "6.0"
thiserror = "2"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
urlencoding = "2.1"
futures-util = "0.3"

# Future 3D paths (Adding wgpu just in case, though optional for now)
# wgpu = "24.0" 

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dev-dependencies]
dioxus-ssr = "=0.7.3"
